# kalorie-tracker

./: .README.md  .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test-ci.yml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routers/: auth.py  food.py  roles.py  users.py  utils.py
app/constants/: __init__.py  auth_contants.py
app/core/: container.py  security.py  settings.py
app/database/: __init__.py  base.py  initializer.py  interceptors.py  query_builder.py
app/errors/: user_errors.py
app/managers/: __init__.py  role_manager.py  user_manager.py
app/middlewares/: __init__.py  authentication.py
app/models/: __init__.py  auth.py  base.py  food.py  user.py
app/queries/: food_queries.py
app/repositories/: __init__.py  base.py  food_repository.py  role_repository.py  user_repository.py
app/schemas/: auth.py  food.py  roles.py  user.py  users.py
app/schemas/common/: __init__.py  error.py  pagination.py  result.py
app/services/: __init__.py  auth_service.py  food_service.py  user_service.py
app/utils/: collection.py
app/validators/: common.py
migrations/: env.py  script.py.mako
migrations/versions/: 02a9015f9e23_auth_role_add_description.py  21cf18043165_add_auth_role.py  84e8a6af9598_cascade_delete_user_role.py  a96780850e0b_add_app_user_user_profile_model.py  cfccd893a9ca_create_auth_user_tables.py  e4de13df0850_create_food_tables.py
tests/: conftest.py
tests/fixtures/: food_factory.py
tests/helpers/builders/: base.py  food_builders.py
tests/unit_tests/models/: test_food_category.py  test_food_item.py  test_recipe.py
